# py_part_recipe

./: LICENSE  README.md  pretest.sh  pyproject.toml
py_part_recipe/: common.py  partition_common.py  spacer.py  volume_common.py
tests/: test_partition_common.py  test_recipe_valid.yaml  test_space.py  test_volume_common.py
